# vw4tools

./: .gitignore  .gitmodules  BUILDING.dox  DEP.dox  DEP_8dox.html  EntityArray_8java.html  EntityArray_8java_source.html  EntityFA_8java.html  EntityFA_8java_source.html  EntityHBA_8java.html  EntityHBA_8java_source.html  EntityHost_8java.html  EntityHost_8java_source.html  Entity_8java.html  Entity_8java_source.html  Makefile.am  OVERVIEW.dox  OVERVIEW.md  README.dox  README.md  README_8dox.html  RUNNING.md  VWImport_8java.html  VWImport_8java_source.html  VirtualWisdom4ClientTool_8java.html  VirtualWisdom4ClientTool_8java_source.html  annotated.html  annotated.js  classes.html  classorg_1_1smallfoot_1_1vw4_1_1Entity.html  classorg_1_1smallfoot_1_1vw4_1_1Entity.js  classorg_1_1smallfoot_1_1vw4_1_1EntityArray.html  classorg_1_1smallfoot_1_1vw4_1_1EntityArray.js  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__coll__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__coll__graph.map  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__coll__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__inherit__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__inherit__graph.map  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__inherit__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityArray_a1d6bf85ddf0a9382cfa4f82dd3063473_cgraph.dot  (+191 more)
convjars/: Makefile.am
depjars/: .gitignore  Makefile.am
docbook/: BUILDING_8dox.xml  DEP_8dox.xml  EntityArray_8java.xml  EntityFA_8java.xml  EntityHBA_8java.xml  EntityHost_8java.xml  Entity_8java.xml  OVERVIEW_8dox.xml  README_8dox.xml  RUNNING_8dox.xml  VWImport_8java.xml  VirtualWisdom4ClientTool_8java.xml  classjava_1_1lang_1_1Exception.xml  classorg_1_1smallfoot_1_1vw4_1_1Entity.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityArray.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityFA.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityHost.xml  classorg_1_1smallfoot_1_1vw4_1_1Entity_1_1ImproperChildException.xml  classorg_1_1smallfoot_1_1vw4_1_1Entity_1_1LeafEntity.xml  classorg_1_1smallfoot_1_1vw4_1_1VWImport.xml  classorg_1_1smallfoot_1_1vw4_1_1VWImport_1_1Entity.xml  classorg_1_1smallfoot_1_1vw4_1_1VWImport_1_1ITLPattern.xml  classorg_1_1smallfoot_1_1vw4_1_1VirtualWisdom4ClientTool.xml  cmdopt.xml  csv-to-json.xml  csv-to-json_8awk.xml  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.xml  dir_93c6ba7fb77bae0709fae89c9c13b44a.xml  docbook.fo  enumorg_1_1smallfoot_1_1vw4_1_1VWImport_1_1Edit__Type.xml  index.xml  inline_dotgraph_1.dot  inline_dotgraph_3.dot  interfaceorg_1_1smallfoot_1_1vw4_1_1VirtualWisdom4ClientTool_1_1EntitySelector.xml  jvmopt.xml  mainpage.xml  md_htdocs_BUILDING.xml  md_htdocs_DEP.xml  md_htdocs_OVERVIEW.xml  (+11 more)
java/: .gitignore  Entity.java  EntityArray.java  EntityFA.java  EntityHBA.java  EntityHost.java  Makefile.am  VWImport.java  VirtualWisdom4ClientTool.java.in
jsonschema2pojo/: Makefile.am
latex/: DEP_8dox.tex  EntityArray_8java.tex  EntityFA_8java.tex  EntityHBA_8java.tex  EntityHost_8java.tex  Entity_8java.tex  README_8dox.tex  VWImport_8java.tex  VirtualWisdom4ClientTool_8java.tex  annotated.tex  classorg_1_1smallfoot_1_1vw4_1_1Entity.tex  classorg_1_1smallfoot_1_1vw4_1_1EntityArray.tex  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__coll__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__coll__graph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__coll__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__inherit__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__inherit__graph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityArray__inherit__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityArray_a1d6bf85ddf0a9382cfa4f82dd3063473_cgraph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityArray_a1d6bf85ddf0a9382cfa4f82dd3063473_cgraph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityFA.tex  classorg_1_1smallfoot_1_1vw4_1_1EntityFA__coll__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityFA__coll__graph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityFA__coll__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityFA__inherit__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityFA__inherit__graph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityFA__inherit__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityFA_a1d6bf85ddf0a9382cfa4f82dd3063473_cgraph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityFA_a1d6bf85ddf0a9382cfa4f82dd3063473_cgraph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityFA_abbe45f145f6cb53a7e9b67b576c42a9e_cgraph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityFA_abbe45f145f6cb53a7e9b67b576c42a9e_cgraph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA.tex  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA__coll__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA__coll__graph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA__coll__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA__inherit__graph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA__inherit__graph.eps  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA__inherit__graph.md5  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA_a1d6bf85ddf0a9382cfa4f82dd3063473_cgraph.dot  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA_a1d6bf85ddf0a9382cfa4f82dd3063473_cgraph.eps  (+125 more)
pkg/: Doxyfile.in  jsonCreation.txt
samples/: import-ITL-packed.json  import-ITL.json  import01.json  server44.json  simple.devicealias  svc-22-01.json
scripts/: .gitignore  Makefile.am  csv-to-json.awk.in
tests-autotest/: Makefile.am  testsuite.at.in
xml/: BUILDING_8dox.xml  DEP_8dox.xml  EntityArray_8java.xml  EntityFA_8java.xml  EntityHBA_8java.xml  EntityHost_8java.xml  Entity_8java.xml  OVERVIEW_8dox.xml  README_8dox.xml  RUNNING_8dox.xml  VWImport_8java.xml  VirtualWisdom4ClientTool_8java.xml  classorg_1_1smallfoot_1_1vw4_1_1Entity.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityArray.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityFA.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityHBA.xml  classorg_1_1smallfoot_1_1vw4_1_1EntityHost.xml  classorg_1_1smallfoot_1_1vw4_1_1Entity_1_1ImproperChildException.xml  classorg_1_1smallfoot_1_1vw4_1_1Entity_1_1LeafEntity.xml  classorg_1_1smallfoot_1_1vw4_1_1VWImport.xml  cmdopt.xml  csv-to-json.xml  index.xml  (+26 more)
(+2 files in other folders)
